syntax = "proto3";

package star_types;

message ChannelScriptPackage {
    bytes payload = 1;
}
